# FastApi_app

./: README.md  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_12_23_1925-826425f5776c_create_product_table.py  2024_12_23_1933-06dde7369463_create_user_table.py  2024_12_23_2022-0420bac59683_create_post_table.py  2024_12_23_2047-13761fa4b715_create_profile_table.py  2024_12_26_1931-47206373ee36_create_orders_model.py  2024_12_26_1944-18fb526942a7_creat_assoc.py  2024_12_26_2058-b50ddb54ded5_creat.py  2024_12_27_1833-827672a5a539_creat2.py
api_v1/demo_auth/: views.py
api_v1/products/: crud.py  dependenci.py  schemas.py  views.py
auth/: utils.py
certs/: generator.py  jwt-private.pem  jwt-public.pem
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  views.py
