[tool.poetry]
name = "pythonproject6"
version = "0.1.0"
description = ""
authors = ["Trashcorp"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.4"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
pydantic-settings = "^2.7.0"
aiosqlite = "^0.20.0"
alembic = "^1.14.0"
black = "^24.10.0"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
